<resources>
    <string name="app_name">lib.middleware</string>

    <!-- 分享 -->
    <string name="share_title">分享到</string>
    <string name="share_cancel">取消</string>
    <string name="share_weibo">微博</string>
    <string name="share_friend_circle">朋友圈</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_qq_zone">QQ空间</string>
    <string name="share_qq">QQ</string>
    <string name="share_wx_favorite">收藏</string>
    <string name="share_name">Hi~ this is weaponApp!</string>
    <string name="share_desc">一个极致的App。学习项目，帮助你提升独自开发 Android 业务层的能力。基于该开发框架，可以快速构建应用，同时你可以当做一个工具 App，以供你平时开发参考。</string>
    <string name="share_url">https://github.com/G-Joker/WeaponApp</string>
    <string name="share_img_url">https://avatars2.githubusercontent.com/u/31761754?v=4&amp;s=200.png</string>
    <string name="share_error_toast">该功能需要全量编译才可运行！</string>
    //----------------------------------------------------

</resources>
