<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#efeff4"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/share_title"
        android:textColor="#de000000"
        android:textSize="16sp"/>

    <LinearLayout
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_share_qq"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_qq"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_qq"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_zone"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_zone"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_qq_zone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_we_chat"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_wechat"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_wechat"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_friend_circle"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_friend_circle"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_friend_circle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_weibo"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_weibo"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_weibo"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#fff"
        android:text="@string/share_cancel"
        android:textColor="#de000000"
        android:textSize="16sp"/>

</LinearLayout>